--- a/TjChess/Base.lproj/Main.storyboard
+++ b/TjChess/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
                                             <constraint firstAttribute="width" constant="400" id="qys-y2-hdf"/>
                                         </constraints>
                                     </customView>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NF0-WV-vb9">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NF0-WV-vb9">
                                         <rect key="frame" x="8" y="67" width="33" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="FEN:" id="jqE-LS-aWC">
                                             <font key="font" metaFont="system"/>
@@ -133,7 +133,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="15O-d3-KQh" userLabel="FEN Edit">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="15O-d3-KQh" userLabel="FEN Edit">
                                         <rect key="frame" x="10" y="38" width="1126" height="21"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="sZx-IC-4uv">
                                             <font key="font" usesAppearanceFont="YES"/>
